Add notification settings management